Changes to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,14 @@
 # VS Code cache and files
 stocks.code-workspace
 
-
 # Data
 data/
 models/
 
 # IPython checkpoints and compiled files
 **/__pycache__/
-.ipynb_checkpoints
+**.ipynb_checkpoints/
+
+# NumPy arrays and archives
+*.npy
+*.npz
