Finished adding up all remaining code

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ models/
 
 # IPython checkpoints and compiled files
 __pycache__/
-**.ipynb_checkpoints
+**.ipynb_checkpoints/
 
 # NumPy arrays and archives
 *.npy
